// Vitest Snapshot v1

exports[`Vite Plugin Web Extension > Configuration > should build additional inputs along side the rest of the manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually
  3. Building script2.ts indvidually

Building page1.html (1/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

Building script2.ts (3/3)
vite v3.1.2 building for production...
transforming...
✓ 2 modules transformed.
rendering chunks...
../dist/script2.css   0.03 KiB / gzip: 0.05 KiB
../dist/script2.js    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.22 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should include assets from the publicDir 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building extension/page1.html indvidually

Building extension/page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"extension/page1\\"
rendering chunks...
dist/extension/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail if the public directory doesn't exist 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building extension/page1.html indvidually

Building extension/page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"extension/page1\\"
rendering chunks...
dist/extension/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=false and the outDirExists=false 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=false and the outDirExists=true 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=true and the outDirExists=false 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should not fail when emptyOutDir=true and the outDirExists=true 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually

Building page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should print validation errors when the manifest is invalid 1`] = `
[Error: Manifest is not valid: [
  {
    "instancePath": "",
    "schemaPath": "#/required",
    "keyword": "required",
    "params": {
      "missingProperty": "manifest_version"
    },
    "message": "must have required property 'manifest_version'"
  }
]]
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than chrome (defaults to chrome) 1`] = `
"Building for browser: chrome
vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.25 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than firefox (defaults to chrome) 1`] = `
"Building for browser: firefox
vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.26 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should respect the browser flags, removing fields other than undefined (defaults to chrome) 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually

Building page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.25 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should support supplementing the script build config via scriptViteConfig 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building dynamic-import.ts indvidually

Building dynamic-import.ts (1/1)
vite v3.1.2 building for production...
transforming...
✓ 3 modules transformed.
rendering chunks...
../dist/dynamic-import.js   0.83 KiB / gzip: 0.52 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should support supplementing the script build config via scriptViteConfig 2`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building extension/page1.html indvidually
  2. Building extension/dynamic-import.ts indvidually

Building extension/page1.html (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"extension/page1\\"
rendering chunks...
dist/extension/page1.html   0.26 KiB

Building extension/dynamic-import.ts (2/2)
vite v3.1.2 building for production...
transforming...
✓ 3 modules transformed.
rendering chunks...
dist/extension/dynamic-import.js   0.83 KiB / gzip: 0.52 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
dist/manifest.json   0.25 KiB"
`;

exports[`Vite Plugin Web Extension > Configuration > should work when the vite root is not specified 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building extension/page1.html indvidually

Building extension/page1.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"extension/page1\\"
rendering chunks...
dist/extension/page1.html   0.26 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.action.default_popup in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.17 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.background.page in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.17 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.background.scripts in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building module.ts indvidually
  2. Building dynamic-import.ts indvidually
  3. Building script1.js indvidually

Building module.ts (1/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/module.js   0.07 KiB / gzip: 0.07 KiB

Building dynamic-import.ts (2/3)
vite v3.1.2 building for production...
transforming...
✓ 3 modules transformed.
rendering chunks...
../dist/module.js           0.09 KiB / gzip: 0.09 KiB
../dist/dynamic-import.js   0.64 KiB / gzip: 0.43 KiB

Building script1.js (3/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.21 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.background.service_worker in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building dynamic-import.ts indvidually

Building dynamic-import.ts (1/1)
vite v3.1.2 building for production...
transforming...
✓ 3 modules transformed.
rendering chunks...
../dist/dynamic-import.js   0.64 KiB / gzip: 0.43 KiB
../dist/module.js           0.09 KiB / gzip: 0.09 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.browser_action.default_popup in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.chrome_settings_overrides.homepage in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.19 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.chrome_url_overrides.bookmarks in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.chrome_url_overrides.history in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.chrome_url_overrides.newtab in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.content_scripts[x].css in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.scss indvidually

Building page1.scss (1/1)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/page1.css   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.20 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.content_scripts[x].js in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building module.ts indvidually
  2. Building script2.ts indvidually

Building module.ts (1/2)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/module.js   0.07 KiB / gzip: 0.07 KiB

Building script2.ts (2/2)
vite v3.1.2 building for production...
transforming...
✓ 2 modules transformed.
rendering chunks...
../dist/script2.js    0.03 KiB / gzip: 0.05 KiB
../dist/script2.css   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.23 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.devtools_page in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.16 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.options_page in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.16 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.options_ui.page in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.17 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.page_action.default_popup in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page2.html indvidually

Building page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 4 modules transformed.
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should auto-build and render the manifest.sandbox.pages in the final manifest 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Bunding 2 entrypoints together:
    • page1.html
    • page2.html

Building page1.html, page2.html (1/1)
vite v3.1.2 building for production...
transforming...
✓ 5 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page2.html   0.38 KiB
../dist/page1.html   0.26 KiB
../dist/page2.css    0.03 KiB / gzip: 0.05 KiB
../dist/page2.js     0.76 KiB / gzip: 0.42 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.18 KiB"
`;

exports[`Vite Plugin Web Extension > Manifest inputs > should build a extension with both html pages and scripts 1`] = `
"vite v3.1.2 building for production...

Build Steps
  1. Building page1.html indvidually
  2. Building script1.js indvidually
  3. Building script2.ts indvidually

Building page1.html (1/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
Generated an empty chunk: \\"page1\\"
rendering chunks...
../dist/page1.html   0.26 KiB

Building script1.js (2/3)
vite v3.1.2 building for production...
transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/script1.js   0.03 KiB / gzip: 0.05 KiB

Building script2.ts (3/3)
vite v3.1.2 building for production...
transforming...
✓ 2 modules transformed.
rendering chunks...
../dist/script2.js    0.03 KiB / gzip: 0.05 KiB
../dist/script2.css   0.03 KiB / gzip: 0.05 KiB

✓ All steps completed.

transforming...
✓ 1 modules transformed.
rendering chunks...
../dist/manifest.json   0.23 KiB"
`;
